--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "module": "ES2022",
     "useDefineForClassFields": false,
     "allowSyntheticDefaultImports": true,
+    "strictPropertyInitialization": false,
     "lib": [
       "ES2022",
       "dom"
